# IBEF-Backend

./: .gitignore  404.html  CONFIG_SYSTEM.md  LICENSE  README.md  SENSOR_CONNECTION_ERRORS.md  ibef-backend.service  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  run.sh  sitemap.xml  test_simulation.sh  testmain.py
.github/workflows/: docs.yml
api/: index.html
assets/css/: custom.css
config/: sensors_config.json
dev/: index.html
docs/: api-reference.md  api.md  arc-sensor.md  auto-sensor-detection.md  config.md  dev.md  index.md  installation-guide.md  models.md  sensor-config.md  sensor-connection-management.md  serial-data.md
docs/assets/: openapi.json
docs/javascripts/: katex.js
scripts/: create_venv.sh  export_openapi.py  hatch_check.sh  setup_systemd.sh
search/: search_index.json
src/: __init__.py  main.py  schemas.py
src/core/: config_loader.py  event_hub.py  port_detector.py  sensor_reconnection.py  service_manager.py
src/core/models/: __init__.py  circular_buffer.py  config_data.py  sensor_data.py  sensor_enum.py  test_data.py  test_state.py
src/core/processing/: __init__.py  data_processor.py  graphique.py  treatment_module.py
src/core/services/: __init__.py  file_writer.py  sensor_manager.py  serial_handler.py  test_manager.py
src/routers/: __init__.py  api.py  data.py  graphique.py  history.py  raw.py  sensor.py  test.py
tests/: conftest.py  test_arc_sensor.py  test_circular_buffer.py  test_config_loader.py  test_data.py  test_emulation_api.py  test_emulation_mode.py  test_emulation_verification.py  test_graphique.py  test_health.py  test_history.py  test_new_features.py  test_port_detector.py  test_raw.py  test_sensor.py  test_sensor_disconnection_errors.py  test_sensor_reconnection.py  test_stop_behavior.py  test_test_router.py
